Base version reached, it works with ls

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="Keep.svg" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin,latin-ext,vietnamese"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Tasks</title>
+    <title>React Keep</title>
   </head>
   <body>
     <div id="root"></div>
